--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% block extra_title %}News{% endblock %}
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -10,67 +11,64 @@
 {% block content %}
     <div class="overlay"></div>
         <div class="container px-3 products-page">
-                            <div class="row news-items">
-                                <div class="col mt-3">
-                                    <h1 class="header-font mb-2 pt-1 text-center text-black">News Items</h1>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="row">
-                                <div class="">
-                                    <div class="row">
-                                        {% for news_item in news_items_published %}
-                                            <div class="col-sm-12 col-md-12 col-lg-6">
-                                                <div class="card news-card p-1 mt-3">
-                                                    <div class="">
-                                                        {% if news_item.image %}
-                                                            <a href="{% url 'news_item' news_item.id %}">
-                                                                <img class="news-card-img-top" src="{{ news_item.image.url }}" alt="{{ news_item.title }}"/>
-                                                            </a>
-                                                        {% else %}
-                                                            <a href="{% url 'news_item' news_item.id %}">
-                                                                <img class="news-card-img-top" src="{{ news_item.image_url }}" alt="{{ news_item.title }}"/>
-                                                            </a>
-                                                        {% endif %}
-                                                    </div>
-                                                    <p class="text-muted mb-0">Posted By: {{ news_item.user }}</p>
-                                                    <p class="text-muted">Posted On: {{ news_item.create_date }}</p>
-                                                    <p class="text-muted">{{news_item.news_item_text|slice:":150" }} ..........</p>
-                                                    <a href="{% url 'news_item' news_item.id %}" class="btn green-btn">
-                                                        Read More
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        {% endfor %}
-                                        {% if news_items_published.has_other_pages %}
-                                                <div class="pagination-holder p-4">
-                                                    <nav aria-label="Products sorted">
-                                                      <ul class="pagination">
-                                                        {% if news_items_published.has_previous %}
-                                                          <li class="page-item"><a class="page-link" href="?page={{ news_items_published.previous_page_number }}">Previous</a></li>
-                                                        {% else %}
-                                                          <li class="disabled page-item"><span class="page-link">Previous</span></li>
-                                                        {% endif %}
-                                                        {% for i in news_items_published.paginator.page_range %}
-                                                          {% if news_items_published.number == i %}
-                                                            <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
-                                                          {% else %}
-                                                            <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                                                          {% endif %}
-                                                        {% endfor %}
-                                                        {% if news_items_published.has_next %}
-                                                          <li class="page-item"><a class="page-link" href="?page={{ news_items_published.next_page_number }}">Next</a></li>
-                                                        {% else %}
-                                                          <li class="disabled page-item"><span class="page-link">Next</span></li>
-                                                        {% endif %}
-                                                      </ul>
-                                                    </nav>
-                                                </div>
-                                            {% endif %}
+            <div class="row news-items">
+                <div class="col mt-3">
+                    <h1 class="header-font mb-2 pt-1 text-center text-black">News Items</h1>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div>
+                    <div class="row">
+                        {% for news_item in news_items_published %}
+                            <div class="col-sm-12 col-md-12 col-lg-6">
+                                <div class="card news-card p-1 mt-3">
+                                    <div class="">
+                                        {% if news_item.image %}
+                                            <a href="{% url 'news_item' news_item.id %}">
+                                                <img class="news-card-img-top" src="{{ news_item.image.url }}" alt="{{ news_item.title }}"/>
+                                            </a>
+                                        {% else %}
+                                            <a href="{% url 'news_item' news_item.id %}">
+                                                <img class="news-card-img-top" src="{{ news_item.image_url }}" alt="{{ news_item.title }}"/>
+                                            </a>
+                                        {% endif %}
                                     </div>
+                                    <p class="text-muted mb-0">Posted By: {{ news_item.user }}</p>
+                                    <p class="text-muted">Posted On: {{ news_item.create_date }}</p>
+                                    <p class="text-muted">{{news_item.news_item_text|slice:":150" }} ..........</p>
+                                    <a href="{% url 'news_item' news_item.id %}" class="btn green-btn">Read More</a>
                                 </div>
                             </div>
-                        </div>
-    </div>
-
+                        {% endfor %}
+                        {% if news_items_published.has_other_pages %}
+                            <!-- Pagination -->
+                            <div class="pagination-holder p-4">
+                                <nav aria-label="Products sorted">
+                                  <ul class="pagination">
+                                    {% if news_items_published.has_previous %}
+                                      <li class="page-item"><a class="page-link" href="?page={{ news_items_published.previous_page_number }}">Previous</a></li>
+                                    {% else %}
+                                      <li class="disabled page-item"><span class="page-link">Previous</span></li>
+                                    {% endif %}
+                                    {% for i in news_items_published.paginator.page_range %}
+                                      {% if news_items_published.number == i %}
+                                        <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+                                      {% else %}
+                                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                                      {% endif %}
+                                    {% endfor %}
+                                    {% if news_items_published.has_next %}
+                                      <li class="page-item"><a class="page-link" href="?page={{ news_items_published.next_page_number }}">Next</a></li>
+                                    {% else %}
+                                      <li class="disabled page-item"><span class="page-link">Next</span></li>
+                                    {% endif %}
+                                  </ul>
+                                </nav>
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
 {% endblock %}
