--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% block extra_title %}Favourites{% endblock %}
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -9,114 +10,117 @@
 {% endblock %}
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid px-3 favourites-page">
-    <div class="row">
-        <div class="col-12 col-sm-6 p-4 my-auto">
-            <h1 class="font-black-bg">Favourites</h1>
-            <p class="font-black-bg">Here are your favourites saved</p>
-        </div>
-        <div class="col-12 col-sm-6 p-4 my-auto">
-            <div class="sort-select-wrapper w-100">
-                <label for="sort-selector"hidden>Sort favourites</label>
-                <select id="sort-selector" class="custom-select custom-select-sm border">
-                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-                    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
-                    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-                    <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
-                    <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
-                    <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
-                    <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
-                    <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
-                    <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
-                </select>
+    <div class="container-fluid px-3 favourites-page">
+        <div class="row">
+            <div class="col-12 col-sm-6 p-4 my-auto">
+                <h1 class="font-black-bg">Favourites</h1>
+                <p class="font-black-bg">Here are your favourites saved</p>
+            </div>
+            <!-- Sorting -->
+            <div class="col-12 col-sm-6 p-4 my-auto">
+                <div class="sort-select-wrapper w-100">
+                    <label for="sort-selector"hidden>Sort favourites</label>
+                    <select id="sort-selector" class="custom-select custom-select-sm border">
+                        <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                        <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+                        <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                        <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+                        <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+                        <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+                        <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+                        <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
+                        <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
+                    </select>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="">
-            <div class="row">
-                {% for favourite in favourites_items %}
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                                <div class="card" style="width: 18rem;">
-                                    {% if favourite.image %}
-                                        <a href="{% url 'product_detail' favourite.id %}">
-                                            <img src="{{ favourite.image.url }}" class="card-img-top" alt="product">
-                                        </a>
-                                    {% else %}
-                                        <a href="{% url 'product_detail' favourite.id %}">
-                                            <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="no image available">
-                                        </a>
-                                    {% endif %}
-                                    <div class="card-body">
-                                        <div class="row">
-                                            <div class="col-12">
-                                                <h2 class="card-title font-black">{{ favourite.name }}</h2>
-                                            </div>
-                                            <div class="col-12">
-                                                <h3 class="font-weight-light font-black">{{ favourite.category }}</h3>
-                                            </div>
-                                            <div class="col-6 font-black">
-                                                {{ favourite.price }}
-                                            </div>
-                                            <div class="col-6 align-self-center font-black">
-                                                <strong>€{{ favourite.price }}</strong>
-                                            </div>
-                                      </div>
-                                        <div class="center-div pt-3">
-                                            <a class="btn green-btn" data-bs-toggle="modal" data-bs-target="#deleteFavourite{{ favourite.id }}">Delete</a>
-                                            <!-- Delete favourite modal -->
-                                            <div class="modal fade" id="deleteFavourite{{ favourite.id }}" tabindex="-1"  aria-hidden="true">
-                                                <div class="modal-dialog">
-                                                    <div class="modal-content">
-                                                        <div class="modal-header">
-                                                            <h2 class="modal-title font-black">Delete Favourite</h2>
-                                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                        </div>
-                                                        <div class="modal-body font-black">
-                                                            Are you sure you want to delete this favourite?
-                                                        </div>
-                                                        <div class="modal-footer">
-                                                            <!-- Close and delete favourite buttons-->
-                                                            <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
-                                                            <a href="{% url 'remove_product_from_favourites' favourite.id 'favourites' %}" class="btn red-btn">Delete</a>
+        <div class="row">
+            <div>
+                <div class="row">
+                    {% for favourite in favourites_items %}
+                            <!-- List of favourites -->
+                            <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                                    <div class="card" style="width: 18rem;">
+                                        {% if favourite.image %}
+                                            <a href="{% url 'product_detail' favourite.id %}">
+                                                <img src="{{ favourite.image.url }}" class="card-img-top" alt="product">
+                                            </a>
+                                        {% else %}
+                                            <a href="{% url 'product_detail' favourite.id %}">
+                                                <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="not available">
+                                            </a>
+                                        {% endif %}
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col-12">
+                                                    <h2 class="card-title font-black">{{ favourite.name }}</h2>
+                                                </div>
+                                                <div class="col-12">
+                                                    <h3 class="font-weight-light font-black">{{ favourite.category }}</h3>
+                                                </div>
+                                                <div class="col-6 font-black">
+                                                    {{ favourite.price }}
+                                                </div>
+                                                <div class="col-6 align-self-center font-black">
+                                                    <strong>€{{ favourite.price }}</strong>
+                                                </div>
+                                          </div>
+                                            <div class="center-div pt-3">
+                                                <a class="btn green-btn" data-bs-toggle="modal" data-bs-target="#deleteFavourite{{ favourite.id }}">Delete</a>
+                                                <!-- Delete favourite modal -->
+                                                <div class="modal fade" id="deleteFavourite{{ favourite.id }}" tabindex="-1"  aria-hidden="true">
+                                                    <div class="modal-dialog">
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <h2 class="modal-title font-black">Delete Favourite</h2>
+                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                            </div>
+                                                            <div class="modal-body font-black">
+                                                                Are you sure you want to delete this favourite?
+                                                            </div>
+                                                            <div class="modal-footer">
+                                                                <!-- Close and delete favourite buttons-->
+                                                                <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
+                                                                <a href="{% url 'remove_product_from_favourites' favourite.id 'favourites' %}" class="btn red-btn">Delete</a>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                  </div>
-                        </div>
-                    {% endfor %}
+                            </div>
+                        {% endfor %}
+                </div>
             </div>
         </div>
+        {% if favourites_items.has_other_pages %}
+            <!-- Pagination -->
+            <div class="pagination-holder p-4">
+                <nav aria-label="Products sorted">
+                  <ul class="pagination">
+                    {% if favourites_items.has_previous %}
+                      <li class="page-item"><a class="page-link" href="?page={{ favourites_items.previous_page_number }}">Previous</a></li>
+                    {% else %}
+                      <li class="disabled page-item"><span class="page-link">Previous</span></li>
+                    {% endif %}
+                    {% for i in favourites_items.paginator.page_range %}
+                      {% if favourites_items.number == i %}
+                        <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
+                      {% else %}
+                        <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+                      {% endif %}
+                    {% endfor %}
+                    {% if favourites_items.has_next %}
+                      <li class="page-item"><a class="page-link" href="?page={{ favourites_items.next_page_number }}">Next</a></li>
+                    {% else %}
+                      <li class="disabled page-item"><span class="page-link">Next</span></li>
+                    {% endif %}
+                  </ul>
+                </nav>
+            </div>
+        {% endif %}
     </div>
-    {% if favourites_items.has_other_pages %}
-        <div class="pagination-holder p-4">
-            <nav aria-label="Products sorted">
-              <ul class="pagination">
-                {% if favourites_items.has_previous %}
-                  <li class="page-item"><a class="page-link" href="?page={{ favourites_items.previous_page_number }}">Previous</a></li>
-                {% else %}
-                  <li class="disabled page-item"><span class="page-link">Previous</span></li>
-                {% endif %}
-                {% for i in favourites_items.paginator.page_range %}
-                  {% if favourites_items.number == i %}
-                    <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">(current)</span></span></li>
-                  {% else %}
-                    <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-                  {% endif %}
-                {% endfor %}
-                {% if favourites_items.has_next %}
-                  <li class="page-item"><a class="page-link" href="?page={{ favourites_items.next_page_number }}">Next</a></li>
-                {% else %}
-                  <li class="disabled page-item"><span class="page-link">Next</span></li>
-                {% endif %}
-              </ul>
-            </nav>
-        </div>
-    {% endif %}
-</div>
 {% endblock %}
 {% block postloadjs %}
     {{ block.super }}
