--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% block extra_title %}Home{% endblock %}
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
