--- a/news/templates/news/edit_news_item.html
+++ b/news/templates/news/edit_news_item.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% block extra_title %}Edit News Item{% endblock %}
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -10,7 +11,7 @@
 {% endblock %}
 {% block content %}
 <div class="overlay"></div>
-<div class="hero-image">
+<div>
     <div class="section-holder">
         <div class="form-holder-lg form-holder-generic">
             <div class="container">
@@ -21,15 +22,16 @@
                         <hr>
                     </div>
                 </div>
+                <!-- Edit New Item -->
                 <div class="row justify-content-center">
                     <div class="col-sm-12 col-lg-8 pb-5">
                         <form method="POST" action="{% url 'edit_news_item' news_item.id %}" class="form mb-2" enctype="multipart/form-data">
                             {% csrf_token %}
                             {% for field in news_form %}
                             {% if field.name != 'image' %}
-                            {{ field | as_crispy_field }}
+                                {{ field | as_crispy_field }}
                             {% else %}
-                            {{ field }}
+                                {{ field }}
                             {% endif %}
                             {% endfor %}
                             <div class="text-center pb-3">
