--- a/news/templates/news/news_item.html
+++ b/news/templates/news/news_item.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% block extra_title %}News Item{% endblock %}
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -21,7 +22,7 @@
                         </div>
                     </div>
                     <hr>
-                    <!-- Fully expanded Individual Blog Posts -->
+                    <!-- News Item -->
                     <div class="container">
                         <div class="col">
                             <div class="text-center">
@@ -40,21 +41,20 @@
                                     {% if news_item.user == request.user or request.user.is_superuser %}
                                         <a class="btn btn-black" href="{% url 'edit_news_item' news_item.id %}" role="button">Edit</a>
                                         <button type="button" class="btn green-btn" data-toggle="modal"
-                                        data-target="#Blog-model">
+                                        data-target="#deleteNewsItem">
                                         Delete</button>
                                         <!-- Delete Button Modal -->
-                                        <div class="modal fade" id="Blog-model" tabindex="-1" role="dialog" aria-labelledby="Blog-model"
-                                            aria-hidden="true">
+                                        <div class="modal fade" id="deleteNewsItem" tabindex="-1" role="dialog" aria-labelledby="deleteNewsItem" aria-hidden="true">
                                             <div class="modal-dialog modal-dialog-centered" role="document">
                                                 <div class="modal-content">
                                                     <div class="modal-header">
-                                                        <h5>Delete Blog news_item: {{ news_item.title }} </h5>
+                                                        <h5>Delete News Item {{ news_item.title }} </h5>
                                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                                             <span aria-hidden="true">&times;</span>
                                                         </button>
                                                     </div>
                                                     <div class="modal-body">
-                                                        You are about to delete news_item Title ({{ news_item.title }}) and all
+                                                        You are about to delete Title ({{ news_item.title }}) and all
                                                         ({{ comments|length }}) user comments, are you sure??
                                                     </div>
                                                     <div class="modal-footer">
@@ -68,7 +68,7 @@
                         </div>
                         <hr>
                     </div>
-                    <!-- Post Comments to individual blogs -->
+                    <!-- Comments on news items -->
                     <div class="container">
                         <div class="row">
                             <div class="col mb-4">
@@ -134,6 +134,7 @@
                         </div>
                             </div>
                             {% if comments.has_other_pages %}
+                                <!-- Pagination -->
                                 <div class="pagination-holder p-4">
                                     <nav aria-label="Products sorted">
                                       <ul class="pagination">
@@ -159,11 +160,9 @@
                                 </div>
                             {% endif %}
                         </div>
-
                     </div>
                 </div>
-    </div>
+            </div>
         </div>
     </div>
-        </div>
 {% endblock %}
