--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% block extra_title %}Edit Product{% endblock %}
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -8,41 +8,40 @@
         </div>
     </div>
 {% endblock %}
-
 {% block content %}
 <div class="overlay"></div>
-<div class="hero-image">
-    <div class="section-holder">
-        <div class="form-holder-lg form-holder-generic">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h1 class="header-font mb-2 pt-4 text-center black-white">Product Management</h1>
-                        <h2 class="header-font mb-2 pt-4 text-center black-white">Edit a Product</h2>
+    <div>
+        <div class="section-holder">
+            <div class="form-holder-lg form-holder-generic">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="header-font mb-2 pt-4 text-center black-white">Product Management</h1>
+                            <h2 class="header-font mb-2 pt-4 text-center black-white">Edit a Product</h2>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-12">
-                        <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
-                            {% csrf_token %}
-                            {% for field in form %}
-                                {% if field.name != 'image' %}
-                                    {{ field | as_crispy_field }}
-                                {% else %}
-                                    {{ field }}
-                                {% endif %}
-                            {% endfor %}
-                            <div class="text-right">
-                                <a class="btn black-btn" href="{% url 'products' %}">Cancel</a>
-                                <button class="btn green-btn" type="submit">Update Product</button>
-                            </div>
-                        </form>
+                    <div class="row">
+                        <div class="col-12">
+                            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
+                                {% csrf_token %}
+                                {% for field in form %}
+                                    {% if field.name != 'image' %}
+                                        {{ field | as_crispy_field }}
+                                    {% else %}
+                                        {{ field }}
+                                    {% endif %}
+                                {% endfor %}
+                                <div class="text-right">
+                                    <a class="btn black-btn" href="{% url 'products' %}">Cancel</a>
+                                    <button class="btn green-btn" type="submit">Update Product</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
 
 {% block postloadjs %}
