--- a/products/templates/products/sale_items.html
+++ b/products/templates/products/sale_items.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% block extra_title %}Sale items{% endblock %}
 {% block page_header %}
     <div class="container header-container">
         <div class="row">
@@ -9,94 +10,95 @@
 {% endblock %}
 {% block content %}
 <div class="overlay"></div>
-<div class="container-fluid px-3 products-page">
-    <div class="row">
-        <div class="col-12 col-sm-6 p-4 my-auto">
-            <h1 class="font-black-bg">Sale Items</h1>
-            <p class="font-black-bg">Browse our extensive rugby boots, jerseys and accessories on sale</p>
-        </div>
-        <div class="col-12 col-sm-6 p-4 my-auto">
-            <div class="sort-select-wrapper w-100">
-                <label for="sort-selector"hidden>Sort products</label>
-                <select id="sort-selector" class="custom-select custom-select-sm border">
-                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
-                    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
-                    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
-                    <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
-                    <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
-                    <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
-                    <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
-                    <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
-                    <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
-                </select>
+    <div class="container-fluid px-3 products-page">
+        <div class="row">
+            <div class="col-12 col-sm-6 p-4 my-auto">
+                <h1 class="font-black-bg">Sale Items</h1>
+                <p class="font-black-bg">Browse our extensive rugby boots, jerseys and accessories on sale</p>
+            </div>
+            <div class="col-12 col-sm-6 p-4 my-auto">
+                <div class="sort-select-wrapper w-100">
+                    <label for="sort-selector" hidden>Sort products</label>
+                    <select id="sort-selector" class="custom-select custom-select-sm border">
+                        <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                        <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
+                        <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high to low)</option>
+                        <option value="rating_asc" {% if current_sorting == 'rating_asc' %}selected{% endif %}>Rating (low to high)</option>
+                        <option value="rating_desc" {% if current_sorting == 'rating_desc' %}selected{% endif %}>Rating (high to low)</option>
+                        <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)</option>
+                        <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)</option>
+                        <option value="category_asc" {% if current_sorting == 'category_asc' %}selected{% endif %}>Category (A-Z)</option>
+                        <option value="category_desc" {% if current_sorting == 'category_desc' %}selected{% endif %}>Category (Z-A)</option>
+                    </select>
+                </div>
             </div>
         </div>
-    </div>
     <div class="row">
-        <div class="">
+        <div>
             <div class="row">
                 {% for product in sale_items %}
-                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                                <div class="card" style="width: 18rem;">
-                                    {% if product.image %}
-                                        <a href="{% url 'product_detail' product.id %}">
-                                            <img src="{{ product.image.url }}" class="card-img-top" alt={{ product.name }}>
-                                        </a>
-                                    {% else %}
-                                        <a href="{% url 'product_detail' product.id %}">
-                                            <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="no image available">
-                                        </a>
+                    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                        <div class="card" style="width: 18rem;">
+                            {% if product.image %}
+                                <a href="{% url 'product_detail' product.id %}">
+                                    <img src="{{ product.image.url }}" class="card-img-top" alt={{ product.name }}>
+                                </a>
+                            {% else %}
+                                <a href="{% url 'product_detail' product.id %}">
+                                    <img src="{{ MEDIA_URL }}noimage.png" class="card-img-top" alt="not available">
+                                </a>
+                            {% endif %}
+                            <div class="card-body">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h2 class="card-title font-black">{{ product.name }}</h2>
+                                    </div>
+                                    <div class="col-12">
+                                        <h3 class="font-weight-light font-black">{{ product.category.friendly_name }}</h3>
+                                    </div>
+                                    {% if product.pre_sale_price %}
+                                        <div class="col-6">
+                                            <p class="font-weight-bold red-strikethrough">€{{ product.pre_sale_price }}</p>
+                                        </div>
                                     {% endif %}
-                                    <div class="card-body">
-                                        <div class="row">
-                                            <div class="col-12">
-                                                <h2 class="card-title font-black">{{ product.name }}</h2>
-                                            </div>
-                                            <div class="col-12">
-                                                <h3 class="font-weight-light font-black">{{ product.category.friendly_name }}</h3>
-                                            </div>
-                                            {% if product.pre_sale_price %}
-                                                <div class="col-6">
-                                                    <p class="font-weight-bold red-strikethrough">€{{ product.pre_sale_price }}</p>
-                                                </div>
-                                            {% endif %}
-                                            <div class="col-6 font-black">
-                                                <p>€{{ product.price }}</p>
-                                            </div>
-                                      </div>
-                                        {% if request.user.is_superuser %}
-                                            <div class="center-div pt-3">
-                                                <a class="btn green-btn mx-2" href="{% url 'edit_product' product.id %}">Edit</a>
-                                                <a class="btn black-btn" data-bs-toggle="modal" data-bs-target="#deleteProduct{{ product.id }}">Delete</a>
-                                                <!-- Delete product modal -->
-                                                <div class="modal fade" id="deleteProduct{{ product.id }}" tabindex="-1"  aria-hidden="true">
-                                                    <div class="modal-dialog">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <h2 class="modal-title font-black">Delete Product</h2>
-                                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                            </div>
-                                                            <div class="modal-body font-black">
-                                                                Are you sure you want to delete this product?
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <!-- Close and delete product buttons-->
-                                                                <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
-                                                                <a href="{% url 'delete_product' product.id %}" class="btn red-btn">Delete</a>
-                                                            </div>
-                                                        </div>
+                                    <div class="col-6 font-black">
+                                        <p>€{{ product.price }}</p>
+                                    </div>
+                              </div>
+                                {% if request.user.is_superuser %}
+                                    <div class="center-div pt-3">
+                                        <a class="btn green-btn mx-2" href="{% url 'edit_product' product.id %}">Edit</a>
+                                        <a class="btn black-btn" data-bs-toggle="modal" data-bs-target="#deleteProduct{{ product.id }}">Delete</a>
+                                        <!-- Delete product modal -->
+                                        <div class="modal fade" id="deleteProduct{{ product.id }}" tabindex="-1"  aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h2 class="modal-title font-black">Delete Product</h2>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                    </div>
+                                                    <div class="modal-body font-black">
+                                                        Are you sure you want to delete this product?
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <!-- Close and delete product buttons-->
+                                                        <button type="button" class="btn black-btn" data-bs-dismiss="modal">Close</button>
+                                                        <a href="{% url 'delete_product' product.id %}" class="btn red-btn">Delete</a>
                                                     </div>
                                                 </div>
                                             </div>
-                                        {% endif %}
+                                        </div>
                                     </div>
-                                  </div>
+                                {% endif %}
+                            </div>
                         </div>
-                    {% endfor %}
+                    </div>
+                {% endfor %}
             </div>
         </div>
     </div>
     {% if products.has_other_pages %}
+        <!-- Pagination -->
         <div class="pagination-holder p-4">
             <nav aria-label="Products sorted">
               <ul class="pagination">
