refactor: Html validation fixes

--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -19,7 +19,7 @@
             <!-- Sorting -->
             <div class="col-12 col-sm-6 p-4 my-auto">
                 <div class="sort-select-wrapper w-100">
-                    <label for="sort-selector"hidden>Sort favourites</label>
+                    <label for="sort-selector" hidden>Sort favourites</label>
                     <select id="sort-selector" class="custom-select custom-select-sm border">
                         <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
                         <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to high)</option>
@@ -43,7 +43,7 @@
                                     <div class="card" style="width: 18rem;">
                                         {% if favourite.image %}
                                             <a href="{% url 'product_detail' favourite.id %}">
-                                                <img src="{{ favourite.image.url }}" class="card-img-top" alt="product">
+                                                <img src="{{ favourite.image.url }}" class="card-img-top" alt="{{ favourite.name }}">
                                             </a>
                                         {% else %}
                                             <a href="{% url 'product_detail' favourite.id %}">
