--- a/products/templates/products/sale_items.html
+++ b/products/templates/products/sale_items.html
@@ -41,7 +41,7 @@
                         <div class="card" style="width: 18rem;">
                             {% if product.image %}
                                 <a href="{% url 'product_detail' product.id %}">
-                                    <img src="{{ product.image.url }}" class="card-img-top" alt={{ product.name }}>
+                                    <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
                                 </a>
                             {% else %}
                                 <a href="{% url 'product_detail' product.id %}">
