feat: Move toast js code into its own javascript file

--- a/templates/base.html
+++ b/templates/base.html
@@ -251,18 +251,7 @@
     </div>
   </footer>
   {% block postloadjs %}
-  <script>
-      let toastElList = [].slice.call(document.querySelectorAll('.toast'))
-        let toastList = toastElList.map(function (toastEl) {
-        let option = {
-            animation: true,
-            autohide: true,
-            delay: 5000,
-        }
-      let bsToast = new bootstrap.Toast(toastEl, option)
-      bsToast.show();
-    })
-  </script>
+    <script src="{% static 'js/toast.js' %}"></script>
   {% endblock %}
   </body>
 </html>
